fix: align FooterNav with detroit updates

--- a/src/navigation/FooterNav.scss
+++ b/src/navigation/FooterNav.scss
@@ -3,7 +3,6 @@
   --copyright-text-color: var(--bloom-color-gray-500);
 
   background-color: var(--background-color);
-  @apply bg-gray-950;
   @apply py-8;
   @apply px-2;
 
